; ModuleID = '/home/carl/AnghaBench/linux/drivers/hid/extr_hid-roccat-konepure.c_konepure_raw_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hid/extr_hid-roccat-konepure.c_konepure_raw_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_device = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.hid_report = type { i32 }
%struct.usb_interface = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }
%struct.roccat_common2_device = type { i32, i64 }

@USB_INTERFACE_PROTOCOL_MOUSE = common dso_local global i64 0, align 8
@KONEPURE_MOUSE_REPORT_NUMBER_BUTTON = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hid_device*, %struct.hid_report*, i64*, i32)* @konepure_raw_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @konepure_raw_event(%struct.hid_device* %0, %struct.hid_report* %1, i64* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.hid_device*, align 8
  %7 = alloca %struct.hid_report*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.usb_interface*, align 8
  %11 = alloca %struct.roccat_common2_device*, align 8
  store %struct.hid_device* %0, %struct.hid_device** %6, align 8
  store %struct.hid_report* %1, %struct.hid_report** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.hid_device*, %struct.hid_device** %6, align 8
  %13 = getelementptr inbounds %struct.hid_device, %struct.hid_device* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.usb_interface* @to_usb_interface(i32 %15)
  store %struct.usb_interface* %16, %struct.usb_interface** %10, align 8
  %17 = load %struct.hid_device*, %struct.hid_device** %6, align 8
  %18 = call %struct.roccat_common2_device* @hid_get_drvdata(%struct.hid_device* %17)
  store %struct.roccat_common2_device* %18, %struct.roccat_common2_device** %11, align 8
  %19 = load %struct.usb_interface*, %struct.usb_interface** %10, align 8
  %20 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %19, i32 0, i32 0
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @USB_INTERFACE_PROTOCOL_MOUSE, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %50

28:                                               ; preds = %4
  %29 = load i64*, i64** %8, align 8
  %30 = getelementptr inbounds i64, i64* %29, i64 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @KONEPURE_MOUSE_REPORT_NUMBER_BUTTON, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %28
  store i32 0, i32* %5, align 4
  br label %50

35:                                               ; preds = %28
  %36 = load %struct.roccat_common2_device*, %struct.roccat_common2_device** %11, align 8
  %37 = icmp ne %struct.roccat_common2_device* %36, null
  br i1 %37, label %38, label %49

38:                                               ; preds = %35
  %39 = load %struct.roccat_common2_device*, %struct.roccat_common2_device** %11, align 8
  %40 = getelementptr inbounds %struct.roccat_common2_device, %struct.roccat_common2_device* %39, i32 0, i32 1
  %41 = load i64, i64* %40, align 8
  %42 = icmp ne i64 %41, 0
  br i1 %42, label %43, label %49

43:                                               ; preds = %38
  %44 = load %struct.roccat_common2_device*, %struct.roccat_common2_device** %11, align 8
  %45 = getelementptr inbounds %struct.roccat_common2_device, %struct.roccat_common2_device* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = load i64*, i64** %8, align 8
  %48 = call i32 @roccat_report_event(i32 %46, i64* %47)
  br label %49

49:                                               ; preds = %43, %38, %35
  store i32 0, i32* %5, align 4
  br label %50

50:                                               ; preds = %49, %34, %27
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local %struct.usb_interface* @to_usb_interface(i32) #1

declare dso_local %struct.roccat_common2_device* @hid_get_drvdata(%struct.hid_device*) #1

declare dso_local i32 @roccat_report_event(i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
